# FileNetAnalyze

./: .replit  README.md  app.py  combined_app.py  file_analyzer.py  network_app.py  pcap_analyzer.py  pyproject.toml  replit.md  requirements.txt  utils.py
attached_assets/: Pasted-You-are-a-senior-software-engineer-with-extensive-expertise-in-developing-high-performance-file-anal-1754780786249_1754780786250.txt
